public/css/account.css
#achats {
    display: flex;
    flex-wrap: wrap;
    gap: 1rem;
    width: 100%;
    padding: 0 1rem;
}

.icons {
    display: flex;
    align-items: center;
    gap: 0.5em;
    width: 100%;
}

#eventTitle {
    padding-bottom: 0.5em;
}

#showMore {
    width: 90%;
    align-items: start;
    gap: 12px;
}

#showMore #eventDescription {
    text-align: left;
}

.icons::before {
    content: '';
    height: 1em;
    width: 1em;
    display: inline-block;
    background-color: #808080;
    mask-position: center;
    mask-size: contain;
    mask-repeat: no-repeat;
    transform: scale(0.9);
}

#eventLocation::before {
    mask-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 384 512"><path d="M215.7 499.2C267 435 384 279.4 384 192C384 86 298 0 192 0S0 86 0 192c0 87.4 117 243 168.3 307.2c12.3 15.3 35.1 15.3 47.4 0zM192 128a64 64 0 1 1 0 128 64 64 0 1 1 0-128z"></path></svg>');
}

#eventTime::before {
    mask-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 512 512"><path d="M256,8C119,8,8,119,8,256S119,504,256,504,504,393,504,256,393,8,256,8Zm92.49,313h0l-20,25a16,16,0,0,1-22.49,2.5h0l-67-49.72a40,40,0,0,1-15-31.23V112a16,16,0,0,1,16-16h32a16,16,0,0,1,16,16V256l58,42.5A16,16,0,0,1,348.49,321Z"></path></svg>');
}

.divider {
    height: 2px;
    width: 100%;
    background-color: var(--secondary-background-color);
}

#action {
    margin-top: 1rem;
}

#action h3 {
    margin: 0;
}

#action #remboursementButton {
    max-width: 40%;
    min-width: 0;
}

#action #priceAndDate {
    text-align: right;
}

#action #priceAndDate p {
    font-size: 0.9rem;
    margin-top: 5px;
}


.itemCard {
    display: flex;
    flex-direction: column;
    min-height: fit-content;
    height: 300px;
    background-color: var(--background-color);
    aspect-ratio: 2/3;
    border-radius: 8px;
    overflow: hidden;
    border: 2px solid var(--secondary-background-color);
}

.itemImage {
    flex-grow: 1;
    object-fit: cover;
}

.itemDesc {
    padding: 1em;
    display: flex;
    flex-direction: column;
    gap: 6px;
}

.itemDesc .itemPrice {
    text-align: right;
}

.itemDesc p {
    font-size: 0.9rem;
    color: #6f6f7a;
}

.itemDesc * {
    margin: 0;
}

